Working with Java 9, 10 and 11